[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/textures/environment/altar.png" type="Texture" id=1]
[ext_resource path="res://src/game/environment/pickables/WeaponPickup.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Default-Medium.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/textures/ui/Controller&KeyPrompts/Keyboard & Mouse/Dark/Mouse_Left_Key_Dark.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/ui/Controller&KeyPrompts/Keyboard & Mouse/Dark/Mouse_Right_Key_Dark.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -11 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponPivot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -11 ), Vector2( 0, -15 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 12 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.505882, 0.654902, 0.384314, 1 )
border_color = Color( 0.0313726, 0.317647, 0.105882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="WeaponPickup" type="Node2D"]
script = ExtResource( 2 )

[node name="PickupAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, -5 )
texture = ExtResource( 1 )

[node name="WeaponPivot" type="Node2D" parent="."]
position = Vector2( 0, -11 )

[node name="WeaponIcon" type="TextureRect" parent="WeaponPivot"]
unique_name_in_owner = true
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="AttackTip" type="Node2D" parent="."]
self_modulate = Color( 0.415686, 0.109804, 0.109804, 1 )

[node name="PrimaryAttackLabel" type="Label" parent="AttackTip"]
margin_left = -105.0
margin_top = -62.0
margin_right = -1.0
margin_bottom = -45.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Ataque Primario"

[node name="SecondayAttackLabel" type="Label" parent="AttackTip"]
margin_left = 1.0
margin_top = -62.0
margin_right = 114.0
margin_bottom = -45.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Ataque Secundario"

[node name="MainAttackHelper" type="Sprite" parent="AttackTip"]
position = Vector2( -53, -23 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="MainAttackHelper2" type="Sprite" parent="AttackTip"]
position = Vector2( 60, -22 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
